kubernetes/apps/social/bluesky/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bluesky
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: social
spec:
  hostnames:
    - "bluesky.vzkn.eu"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: bluesky
          port: 8080
      filters:
        - type: CORS
          cors:
            allowHeaders:
              - "*"
            allowMethods:
              - "*"
            allowOrigins:
              - "*"
            maxAge: 86400
